# 2D-geometric-editor

./: .gitignore  2D-geometric-editor.cbp  CMakeLists.txt  Engine.cpp  Engine.h  LICENSE  README.md  draw_helper.cpp  draw_helper.h  geometry_data_structures.cpp  geometry_data_structures.h  main.cpp  snippets.md
geometry/: Point.cpp  Point.h  Rectangle.cpp  Rectangle.h  Square.cpp  Square.h  geometry_common.cpp  geometry_common.h  geometry_constants.h  geometry_functions.cpp  geometry_functions.h  geometry_structs.h  point.cpp  point.h
graphics/: Colour.cpp  Colour.h  SimpleTextBox.cpp  SimpleTextBox.h  Text.cpp  Text.h  graphics_structs.h
logic/: BoundingBox.cpp  BoundingBox.h
